--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/CarbonChartBubblePacked.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Carapace</title>
+    <style>
+      html, body{
+        @apply h-screen w-screen
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
