--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/CarbonChartBubblePacked.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carapace</title>
-    <style>
-      html, body{
-        @apply h-screen w-screen
-      }
-    </style>
+    <link rel="stylesheet" href="./src/styles/global.css">
   </head>
   <body>
     <div id="app"></div>
