feat: add new webfont

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/CarbonChartBubblePacked.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carapace</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/global.css">
   </head>
-  <body>
+  <body class="noto-sans-sc">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
