--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/global.css">
   </head>
-  <body class="noto-sans-sc">
+  <body class="font-sans">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
